--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -45,6 +45,28 @@
                 <div class="row">
                   <div class="box box-primary direct-chat direct-chat-primary">
                     <div class="box-body">
+                      <div class="chat-btn">
+                        <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 2">
+                          <button (click)="onSomeMsgAction(5)" class="btn btn-success">Resolve Chat</button>
+                          <div class="dropdown target-drop" [appDropdown]="'open'" [disable-hover]="true" >
+                            <button class="btn btn-default dropdown-toggle"
+                                    type="button" data-toggle="dropdown">
+                              Transfer
+                              <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li class="dropdown-submenu" *ngFor="let department of (chatState | async).agentList; let i = index;">
+                                <div class="dropdown" [appDropdown]="'open'" [disable-hover]="false">
+                                  <a class="test" tabindex="-1">{{ department.department_name }}  <span class="caret"></span></a>
+                                  <ul class="dropdown-menu">
+                                    <li><a tabindex="-1" (click)="transferChatToDepartment(department.department_id)">Transfer to department </a></li>
+                                    <li *ngFor="let agent of department.agent"><a tabindex="-1" (click)="transferChatToAgent(agent.agent_id)">{{ agent.agent_id }}</a></li>
+                                  </ul>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                      </div>
                       <!-- Conversations are loaded here -->
                       <div class="direct-chat-messages">
                         <!-- Message. Default to the left -->
@@ -62,26 +84,7 @@
                           <button (click)="onSomeMsgAction(2)" class="btn btn-primary">Accept</button>
                           <button (click)="onSomeMsgAction(3)" class="btn btn-danger">Reject</button>
                         </div>
-                        <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 2">
-                          <button (click)="onSomeMsgAction(5)" class="btn btn-success">Resolve Chat</button>
-                          <div class="dropdown" [appDropdown]="'open'" [disable-hover]="true" >
-                            <button class="btn btn-default dropdown-toggle"
-                                    type="button" data-toggle="dropdown">
-                              Transfer
-                              <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                              <li class="dropdown-submenu" *ngFor="let department of agentList">
-                                <div class="dropdown" [appDropdown]="'open'" [disable-hover]="false">
-                                  <a class="test" tabindex="-1">{{ department.department }}  <span class="caret"></span></a>
-                                  <ul class="dropdown-menu">
-                                    <li><a tabindex="-1" (click)="transferChatToDepartment(department.department)">Transfer to dept </a></li>
-                                    <li *ngFor="let agent of department.agents"><a tabindex="-1" (click)="transferChatToAgent(agent.agent_id)">{{ agent.agent_id }}</a></li>
-                                  </ul>
-                                </div>
-                              </li>
-                            </ul>
-                          </div>
+
 
                         </div>
 
