--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
@@ -143,3 +143,38 @@ h2{
 a {
     cursor: pointer;
 }
+
+
+
+
+
+
+
+.super-sub{display: none;}
+
+li.dropdown-submenu li:hover .super-sub{display: block}
+ul.super-sub{padding: 0;
+    margin: 0;
+    position: absolute;
+    right: -188px;
+    width: 194px;
+    background: #fff;
+    border: 1px solid rgba(0,0,0,.15);
+    top: 4px;
+}
+ul.super-sub li{list-style: none; padding: 4px 0;}
+ul.super-sub li a{display: block;}
+ul.super-sub li:hover{background: #e1e3e9;}
+
+
+
+
+
+
+
+
+
+
+
+
+
