--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
@@ -102,14 +102,40 @@ h2{
 
 .dropdown-submenu {
     position: relative;
+    text-align: center;
+    border-bottom: 1px solid #eee;
+    padding: 5px;
+}
+.dropdown-submenu:last-child {
+    border: none;
+}
+
+.chat-btn{
+    margin: 10px 20px 20px;
+}
+
+.chat-btn .target-drop{
+    display: inline-block;
+}
+.dropdown-submenu a{
+    color: #666;
+}
+.open>.dropdown-menu {
+    display: block;
 }
 
 .dropdown-submenu .dropdown-menu {
     top: 0;
     left: 100%;
     margin-top: -1px;
+    text-align: center;
 }
-
+.dropdown-submenu .dropdown-menu li {
+    border-bottom: 1px solid #eee;
+}
+.dropdown-submenu .dropdown-menu li:last-child {
+    border: none;
+}
 .show {
     display: block;
 }
@@ -117,3 +143,37 @@ h2{
 a {
     cursor: pointer;
 }
+
+
+
+
+
+
+
+.super-sub{display: none;}
+
+li.dropdown-submenu li:hover .super-sub{display: block}
+ul.super-sub{padding: 0;
+    margin: 0;
+    position: absolute;
+    right: -188px;
+    width: 194px;
+    background: #fff;
+    border: 1px solid rgba(0,0,0,.15);
+    top: 4px;
+}
+ul.super-sub li{list-style: none; padding: 4px 0;}
+ul.super-sub li a{display: block;}
+ul.super-sub li:hover{background: #e1e3e9;}
+
+
+
+
+
+
+
+
+
+
+
+
