--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -45,43 +45,53 @@
                 <div class="row">
                   <div class="box box-primary direct-chat direct-chat-primary">
                     <div class="box-body">
-                      <!-- Conversations are loaded here -->
-                      <div class="direct-chat-messages">
-                        <!-- Message. Default to the left -->
-                        <div class="direct-chat-msg" [ngClass]="{ right: chat.direction == 2 }" *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
-                          <div class="direct-chat-info clearfix">
-                            <span class="direct-chat-name" [ngClass]="chat.direction == 2 ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
-                            <span class="direct-chat-timestamp" [ngClass]="chat.direction == 1 ? 'pull-right' : 'pull-left'">23 Jan 2:00 pm</span>
-                          </div>
-                          <img class="direct-chat-img" [src]="chat.direction == 2 ?  '../../../../assets/img/user1-128x128.jpg' : '../../../../assets/img/user3-128x128.jpg'" alt="Message User Image"><!-- /.direct-chat-img -->
-                          <div class="direct-chat-text">
-                            {{chat.message}}
-                          </div>
-                        </div>
-                        <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 1">
-                          <button (click)="onSomeMsgAction(2)" class="btn btn-primary">Accept</button>
-                          <button (click)="onSomeMsgAction(3)" class="btn btn-danger">Reject</button>
-                        </div>
+                      <div class="chat-btn">
                         <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 2">
                           <button (click)="onSomeMsgAction(5)" class="btn btn-success">Resolve Chat</button>
-                          <div class="dropdown" [appDropdown]="'open'" [disable-hover]="true" >
+                          <div class="dropdown target-drop" [appDropdown]="'open'" [disable-hover]="true" >
                             <button class="btn btn-default dropdown-toggle"
                                     type="button" data-toggle="dropdown">
                               Transfer
                               <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                              <li class="dropdown-submenu" *ngFor="let department of agentList">
+                              <li class="dropdown-submenu" *ngFor="let department of (chatState | async).agentList; let i = index;">
                                 <div class="dropdown" [appDropdown]="'open'" [disable-hover]="false">
-                                  <a class="test" tabindex="-1">{{ department.department }}  <span class="caret"></span></a>
+                                  <a class="test" tabindex="-1">{{ department.department_name }}  <span class="caret"></span></a>
                                   <ul class="dropdown-menu">
-                                    <li><a tabindex="-1" (click)="transferChatToDepartment(department.department)">Transfer to dept </a></li>
-                                    <li *ngFor="let agent of department.agents"><a tabindex="-1" (click)="transferChatToAgent(agent.agent_id)">{{ agent.agent_id }}</a></li>
+                                    <li><a tabindex="-1" (click)="transferChatToDepartment(department.department_id)">Transfer to department </a></li>
+                                    <li class="dropdown-submenu">
+                                      <a tabindex="-1" >Transfer to agent </a>
+                                      <ul class="super-sub">
+                                        <li *ngFor="let agent of department.agent">
+                                          <a tabindex="-1" (click)="transferChatToAgent(agent.agent_id)"> {{ agent.first_name }}  </a>
+                                        </li>
+                                      </ul>
+                                    </li>
                                   </ul>
                                 </div>
                               </li>
                             </ul>
                           </div>
+                        </div>
+                        <!-- Conversations are loaded here -->
+                        <div class="direct-chat-messages">
+                          <!-- Message. Default to the left -->
+                          <div class="direct-chat-msg" [ngClass]="{ right: chat.direction == 2 }" *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
+                            <div class="direct-chat-info clearfix">
+                              <span class="direct-chat-name" [ngClass]="chat.direction == 2 ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
+                              <span class="direct-chat-timestamp" [ngClass]="chat.direction == 1 ? 'pull-right' : 'pull-left'">23 Jan 2:00 pm</span>
+                            </div>
+                            <img class="direct-chat-img" [src]="chat.direction == 2 ?  '../../../../assets/img/user1-128x128.jpg' : '../../../../assets/img/user3-128x128.jpg'" alt="Message User Image"><!-- /.direct-chat-img -->
+                            <div class="direct-chat-text">
+                              {{chat.message}}
+                            </div>
+                          </div>
+                          <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 1">
+                            <button (click)="onSomeMsgAction(2)" class="btn btn-primary">Accept</button>
+                            <button (click)="onSomeMsgAction(3)" class="btn btn-danger">Reject</button>
+                          </div>
+
 
                         </div>
 
@@ -130,6 +140,5 @@
     <!-- /.row -->
   </section>
 </div>
-
 
 
