--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -38,7 +38,7 @@
                 <td>{{item.phone}}</td>
                 <td>
                   <!-- Single button -->
-                  <div class="btn-group" [appDropdown]="'open'">
+                  <div class="btn-group" [appDropdown]="'open'" [disable-hover]="true">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Action <span class="caret"></span>
                     </button>
