--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -15,7 +15,7 @@
             <div class="row">
               <h2>Messages</h2>
             </div>
-
+            {{ getLoggedInAgentDetails() | json}} {{'306500'}}
             <div class="row" *ngIf="!!(showChats() | async).length">
               <div class="col-md-3 col-sm-3">
                 <div class="row">
