Fixing chat load issue v0.4

--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
@@ -167,7 +167,11 @@ ul.super-sub li a{display: block;}
 ul.super-sub li:hover{background: #e1e3e9;}
 
 
-
+.btn-disabled,.btn-disabled[disabled] {
+    opacity: .4;
+    cursor: not-allowed;
+    pointer-events: none;
+}
 
 
 
