--- a/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.html
@@ -15,7 +15,7 @@
             <div class="row">
               <h2>Messages</h2>
             </div>
-            <div class="row">
+            <div class="row" *ngIf="!!(showChats() | async).length">
               <div class="col-md-3 col-sm-3">
                 <div class="row">
                   <div class="chat-list">
@@ -64,6 +64,19 @@
                 </div>
               </div>
             </div>
+
+            <div class="row" *ngIf="!(showChats() | async).length">
+              <div class="box box-primary">
+                <div class="box-body" >
+                  <div class="col-md-9 col-sm-9">
+                    <div class="col-md-5 col-sm-5">
+                      <h4>No chats found at the moment!</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
         <!-- /.box -->
