Added company filter v0.1

--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -16,6 +16,7 @@
           </div>
           <!-- /.box-header -->
           <div class="box-body">
+            <input type="text" [(ngModel)]="companyFilter" placeholder="name">
             <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12"><table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
               <thead>
               <tr role="row">
@@ -30,7 +31,7 @@
               </tr>
               </thead>
               <tbody>
-              <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).admin.list; let i = index">
+              <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).admin.list | filterBy: companyFilter; let i = index">
                 <td>{{i}}</td>
                 <td>{{item.first_name}}</td>
                 <td>{{item.last_name}}</td>
