--- a/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
@@ -29,7 +29,7 @@
               </tr>
               </thead>
               <tbody>
-                <tr role="row" class="odd" *ngFor="let item of (chatState | async).agentList; let i = index">
+                <tr role="row" class="odd" *ngFor="let item of (chatState | async).agentList  | paginate: { itemsPerPage: 10, currentPage: p }; let i = index">
                 <td>{{i}}</td>
                 <td>{{item.first_name}}</td>
                 <td>{{item.last_name}}</td>
@@ -65,37 +65,15 @@
             </div>
               <div class="row">
                 <div class="col-sm-5">
-                  <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>
+                  <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of {{ (chatState | async).agentList.length }} entries</div>
                 </div>
                 <div class="col-sm-7 text-right">
-                  <div class="dataTables_paginate paging_simple_numbers" id="example2_paginate">
-                    <ul class="pagination">
-                      <li class="paginate_button previous disabled" id="example2_previous">
-                        <a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0">Previous</a>
-                      </li>
-                      <li class="paginate_button active">
-                        <a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0">1</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="2" tabindex="0">2</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="3" tabindex="0">3</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="4" tabindex="0">4</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="5" tabindex="0">5</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="6" tabindex="0">6</a>
-                      </li>
-                      <li class="paginate_button next" id="example2_next">
-                        <a href="#" aria-controls="example2" data-dt-idx="7" tabindex="0">Next</a>
-                      </li>
-                    </ul>
-                  </div>
+                  <pagination-controls
+                          (pageChange)="p = $event"
+                          directionLinks="true"
+                          previousLabel="Previous"
+                          nextLabel="Next">
+                  </pagination-controls>
                 </div>
               </div>
             </div>
