--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
@@ -173,6 +173,9 @@ ul.super-sub li:hover{background: #e1e3e9;}
     pointer-events: none;
 }
 
+.direct-chat-text {
+    word-break: break-all;
+}
 
 
 
