--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -16,6 +16,23 @@
           </div>
           <!-- /.box-header -->
           <div class="box-body">
+            <div class="row">
+              <form #form="ngForm" (submit)="onSubmit(form)">
+                <div class="col-md-2">
+                  <div class="form-group">
+
+                    <input type="text"
+                           class="form-control"
+                           placeholder="Search"
+                           name="filter"
+                           required
+                           ngModel
+                           ng-keyup="onSubmit(form)"
+                    >
+                  </div>
+                </div>
+              </form>
+            </div>
             <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12"><table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
               <thead>
               <tr role="row">
