--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -13,12 +13,9 @@
         <div class="box">
           <div class="box-header">
             <h3 class="box-title">Agent List</h3>
-          </div>
-          <!-- /.box-header -->
-          <div class="box-body">
-            <div class="row">
+            <div class="pull-right">
               <form #form="ngForm" (submit)="onSubmit(form)">
-                <div class="col-md-2">
+                <div class="col-md-12">
                   <div class="form-group">
 
                     <input type="text"
@@ -33,6 +30,9 @@
                 </div>
               </form>
             </div>
+          </div>
+          <!-- /.box-header -->
+          <div class="box-body">
             <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12"><table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
               <thead>
               <tr role="row">
