--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -14,21 +14,39 @@
           <div class="box-header">
             <h3 class="box-title">Admin List</h3>
             <div class="pull-right">
-              <form #form="ngForm" (submit)="onSubmit(form)">
-                <div class="col-md-12">
-                  <div class="form-group">
+              <div class="col-md-12">
+                <form #form="ngForm" (submit)="onSubmit(form)">
+                  <div class="col-md-5">
+                    <div class="form-group">
 
                     <input type="text"
                            class="form-control"
-                           placeholder="Search"
-                           name="filter"
+                           placeholder="Search Company"
+                           name="company"
                            required
                            ngModel
                            ng-keyup="onSubmit(form)"
                     >
                   </div>
-                </div>
-              </form>
+                  </div>
+                  <div class="col-md-5">
+                    <div class="form-group">
+
+                      <input type="text"
+                             class="form-control"
+                             placeholder="Search"
+                             name="filter"
+                             required
+                             ngModel
+                             ng-keyup="onSubmit(form)"
+                      >
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                    <button type="submit" class="btn btn-primary" >Search</button>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
           <!-- /.box-header -->
