navigation options and superadmin popup fixed

--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
@@ -3,8 +3,8 @@
     <h1>Agent Section</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
+      <li><a routerLink="/agent/list">Agent</a></li>
+      <li class="active"><a href="javascript:void(0)">{{editMode ? 'Edit' : 'Create'}}</a></li>
     </ol>
   </section>
   <section class="content">
