--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -3,8 +3,8 @@
     <h1>Admin List</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
+      <li><a href="javascript:void(0)">Admin</a></li>
+      <li class="active"><a routerLink="/admin/list">Admin List</a></li>
     </ol>
   </section>
   <section class="content">
