--- a/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
+++ b/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
@@ -3,8 +3,8 @@
     <h1>Contact List</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
+      <li><a routerLink="/chats/list-agents-contacts">Contact</a></li>
+      <li class="active"><a href="javascript:void(0)">View</a></li>
     </ol>
   </section>
   <section class="content">
@@ -85,9 +85,9 @@
           <!-- /.box-body -->
         </div>
         <!-- /.box -->
-        <div class="msg-popup">
-          <p>This is a success msg!</p>
-        </div>
+        <!--<div class="msg-popup">-->
+          <!--<p>This is a success msg!</p>-->
+        <!--</div>-->
       </div>
       <!-- /.col -->
     </div>
