--- a/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.html
@@ -3,8 +3,8 @@
     <h1>Previous Chats</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
+      <li><a routerLink="/chats/list-agent">Chats</a></li>
+      <li class="active"><a href="javascript:void(0)">View</a></li>
     </ol>
   </section>
   <section class="content">
