--- a/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
@@ -15,49 +15,19 @@
   <!-- Main content -->
   <section class="content">
     <!-- Small boxes (Stat box) -->
-    <div class="row">
-      <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
-        <div class="small-box bg-aqua">
-          <div class="inner">
-            <h3>150</h3>
-
-            <p>New Orders</p>
-          </div>
-          <div class="icon">
-            <i class="ion ion-bag"></i>
-          </div>
-          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-        </div>
-      </div>
-      <!-- ./col -->
-      <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
-        <div class="small-box bg-green">
-          <div class="inner">
-            <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-            <p>Bounce Rate</p>
-          </div>
-          <div class="icon">
-            <i class="ion ion-stats-bars"></i>
-          </div>
-          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-        </div>
-      </div>
-      <!-- ./col -->
+    <div class="row"  *ngIf="(authState | async).isSuperAdmin || (authState | async).isAdmin">
+      <!-- Only for Admin and Superadmin-->
       <div class="col-lg-3 col-xs-6">
         <!-- small box -->
         <div class="small-box bg-yellow">
           <div class="inner">
-            <h3>44</h3>
-
-            <p>User Registrations</p>
+            <h3>{{admin}}</h3>
+            <p>Admins</p>
           </div>
           <div class="icon">
             <i class="ion ion-person-add"></i>
           </div>
-          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+          <a routerLink="/admin/list" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
       </div>
       <!-- ./col -->
@@ -66,13 +36,42 @@
         <div class="small-box bg-red">
           <div class="inner">
             <h3>65</h3>
-
-            <p>Unique Visitors</p>
+            <p>Agents</p>
           </div>
           <div class="icon">
             <i class="ion ion-pie-graph"></i>
           </div>
-          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+          <a routerLink="/agent/list" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+        </div>
+      </div>
+      <!-- ./col -->
+      <!-- ./col -->
+      <div class="col-lg-3 col-xs-6">
+        <!-- small box -->
+        <div class="small-box bg-green">
+          <div class="inner">
+            <h3>65</h3>
+            <p>Departments</p>
+          </div>
+          <div class="icon">
+            <i class="ion ion-pie-graph"></i>
+          </div>
+          <a routerLink="/department/list" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+        </div>
+      </div>
+      <!-- ./col -->
+      <!-- ./col -->
+      <div class="col-lg-3 col-xs-6">
+        <!-- small box -->
+        <div class="small-box bg-blue">
+          <div class="inner">
+            <h3>65</h3>
+            <p>Widgets</p>
+          </div>
+          <div class="icon">
+            <i class="ion ion-pie-graph"></i>
+          </div>
+          <a routerLink="/widget/list" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
       </div>
       <!-- ./col -->
@@ -81,66 +80,66 @@
   </section>
   <!-- /.content -->
 
-  <section class="content">
-    <!-- Info boxes -->
-    <div class="row">
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="info-box">
-          <span class="info-box-icon bg-aqua"><i class="ion ion-ios-gear-outline"></i></span>
+  <!--<section class="content">-->
+    <!--&lt;!&ndash; Info boxes &ndash;&gt;-->
+    <!--<div class="row">-->
+      <!--<div class="col-md-3 col-sm-6 col-xs-12">-->
+        <!--<div class="info-box">-->
+          <!--<span class="info-box-icon bg-aqua"><i class="ion ion-ios-gear-outline"></i></span>-->
 
-          <div class="info-box-content">
-            <span class="info-box-text">CPU Traffic</span>
-            <span class="info-box-number">90<small>%</small></span>
-          </div>
-          <!-- /.info-box-content -->
-        </div>
-        <!-- /.info-box -->
-      </div>
-      <!-- /.col -->
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="info-box">
-          <span class="info-box-icon bg-red"><i class="fa fa-google-plus"></i></span>
+          <!--<div class="info-box-content">-->
+            <!--<span class="info-box-text">CPU Traffic</span>-->
+            <!--<span class="info-box-number">90<small>%</small></span>-->
+          <!--</div>-->
+          <!--&lt;!&ndash; /.info-box-content &ndash;&gt;-->
+        <!--</div>-->
+        <!--&lt;!&ndash; /.info-box &ndash;&gt;-->
+      <!--</div>-->
+      <!--&lt;!&ndash; /.col &ndash;&gt;-->
+      <!--<div class="col-md-3 col-sm-6 col-xs-12">-->
+        <!--<div class="info-box">-->
+          <!--<span class="info-box-icon bg-red"><i class="fa fa-google-plus"></i></span>-->
 
-          <div class="info-box-content">
-            <span class="info-box-text">Likes</span>
-            <span class="info-box-number">41,410</span>
-          </div>
-          <!-- /.info-box-content -->
-        </div>
-        <!-- /.info-box -->
-      </div>
-      <!-- /.col -->
+          <!--<div class="info-box-content">-->
+            <!--<span class="info-box-text">Likes</span>-->
+            <!--<span class="info-box-number">41,410</span>-->
+          <!--</div>-->
+          <!--&lt;!&ndash; /.info-box-content &ndash;&gt;-->
+        <!--</div>-->
+        <!--&lt;!&ndash; /.info-box &ndash;&gt;-->
+      <!--</div>-->
+      <!--&lt;!&ndash; /.col &ndash;&gt;-->
 
-      <!-- fix for small devices only -->
-      <div class="clearfix visible-sm-block"></div>
+      <!--&lt;!&ndash; fix for small devices only &ndash;&gt;-->
+      <!--<div class="clearfix visible-sm-block"></div>-->
 
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="info-box">
-          <span class="info-box-icon bg-green"><i class="ion ion-ios-cart-outline"></i></span>
+      <!--<div class="col-md-3 col-sm-6 col-xs-12">-->
+        <!--<div class="info-box">-->
+          <!--<span class="info-box-icon bg-green"><i class="ion ion-ios-cart-outline"></i></span>-->
 
-          <div class="info-box-content">
-            <span class="info-box-text">Sales</span>
-            <span class="info-box-number">760</span>
-          </div>
-          <!-- /.info-box-content -->
-        </div>
-        <!-- /.info-box -->
-      </div>
-      <!-- /.col -->
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="info-box">
-          <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
+          <!--<div class="info-box-content">-->
+            <!--<span class="info-box-text">Sales</span>-->
+            <!--<span class="info-box-number">760</span>-->
+          <!--</div>-->
+          <!--&lt;!&ndash; /.info-box-content &ndash;&gt;-->
+        <!--</div>-->
+        <!--&lt;!&ndash; /.info-box &ndash;&gt;-->
+      <!--</div>-->
+      <!--&lt;!&ndash; /.col &ndash;&gt;-->
+      <!--<div class="col-md-3 col-sm-6 col-xs-12">-->
+        <!--<div class="info-box">-->
+          <!--<span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>-->
 
-          <div class="info-box-content">
-            <span class="info-box-text">New Members</span>
-            <span class="info-box-number">2,000</span>
-          </div>
-          <!-- /.info-box-content -->
-        </div>
-        <!-- /.info-box -->
-      </div>
-      <!-- /.col -->
-    </div>
-  </section>
+          <!--<div class="info-box-content">-->
+            <!--<span class="info-box-text">New Members</span>-->
+            <!--<span class="info-box-number">2,000</span>-->
+          <!--</div>-->
+          <!--&lt;!&ndash; /.info-box-content &ndash;&gt;-->
+        <!--</div>-->
+        <!--&lt;!&ndash; /.info-box &ndash;&gt;-->
+      <!--</div>-->
+      <!--&lt;!&ndash; /.col &ndash;&gt;-->
+    <!--</div>-->
+  <!--</section>-->
 
 </div>
