--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
@@ -3,8 +3,8 @@
         <h1>Department Section</h1>
         <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li><a href="#">Tables</a></li>
-            <li class="active">Data tables</li>
+            <li><a href="javascript:void(0)">Department</a></li>
+            <li class="active"><a href="javascript:void(0)">List</a></li>
         </ol>
     </section>
     <section class="content">
