--- a/src/app/core/layout/inner-pages/twilio/create-twilio/create-twilio.component.html
+++ b/src/app/core/layout/inner-pages/twilio/create-twilio/create-twilio.component.html
@@ -3,8 +3,8 @@
     <h1>Twilio Section</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
+      <li><a href="javascript:void(0)">Twilio Accounts</a></li>
+      <li class="active"><a routerLink="/twilio/create">Create </a></li>
     </ol>
   </section>
   <section class="content">
