--- a/src/app/core/layout/inner-pages/twilio/list-twilio/list-twilio.component.html
+++ b/src/app/core/layout/inner-pages/twilio/list-twilio/list-twilio.component.html
@@ -3,8 +3,8 @@
     <h1>Twilio Section</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
+      <li><a href="javascript:void(0)">Twilio Accounts</a></li>
+      <li class="active"><a routerLink="/twilio/list">List </a></li>
     </ol>
   </section>
   <section class="content">
@@ -28,7 +28,7 @@
               <tr role="row">
                 <th class="sorting" rowspan="1" colspan="1" >#</th>
                 <th class="sorting" rowspan="1" colspan="1" >User</th>
-                <th class="sorting" rowspan="1" colspan="1" >User Name</th>
+                <!--<th class="sorting" rowspan="1" colspan="1" >User Name</th>-->
                 <th class="sorting" rowspan="1" colspan="1" >Email Address</th>
                 <th class="sorting" rowspan="1" colspan="1" >Twilio SID</th>
                 <th class="sorting" rowspan="1" colspan="1" >Twilio Account Type</th>
@@ -39,7 +39,7 @@
                 <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).twilio.list; let i = index">
                   <td>{{i+1}}</td>
                   <td>{{item.user_info.first_name}} {{item.user_info.last_name}}</td>
-                  <td>{{item.user_info.username}}</td>
+                  <!--<td>{{item.user_info.username}}</td>-->
                   <td>{{item.user_info.email}}</td>
                   <td>{{item.twilio_sid}}</td>
                   <td>{{ item.user_info.type == '1' ? 'Main Account' : 'Subaccount' }} </td>                  
@@ -50,7 +50,7 @@
                 <tr>
                   <th rowspan="1" colspan="1">#</th>
                   <th rowspan="1" colspan="1">User</th>
-                  <th rowspan="1" colspan="1">User Name</th>
+                  <!--<th rowspan="1" colspan="1">User Name</th>-->
                   <th rowspan="1" colspan="1">Email Address</th>
                   <th rowspan="1" colspan="1">Twilio SID</th>
                   <th rowspan="1" colspan="1">Twilio Account Type</th>
