--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -24,9 +24,9 @@
 
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      <b>Version</b> 7.0.0
+      <!--<b>Version</b> 7.0.0-->
     </div>
-    <strong>Copyright &copy; 2017 <a href="#">TM SMS | 3C</a>.</strong> All rights
+    <strong>Copyright &copy; {{ currentYear }} <a href="#">TM SMS | 3C</a>.</strong> All rights
     reserved.
   </footer>
 
