Add pagintation and modify table listing v1.0
	pagination in admin,agent,department,chat and contact list

--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -2,7 +2,7 @@
     <section class="content-header">
         <h1>Department Section</h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
             <li><a routerLink="/department/list">Department</a></li>
             <li class="active"><a href="javascript:void(0)">{{ editMode ? 'Edit' : 'Create' }}</a></li>
         </ol>
