--- a/src/app/core/layout/inner-pages/admin/create-admin/create-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/create-admin/create-admin.component.html
@@ -2,7 +2,7 @@
   <section class="content-header">
     <h1>Admin Section</h1>
     <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+      <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
       <li><a routerLink="/admin/list">Admin</a></li>
       <li class="active"><a href="javascript:void(0)">{{editMode ? 'Edit' : 'Create'}}</a></li>
     </ol>
