--- a/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
@@ -2,7 +2,7 @@
   <section class="content-header">
     <h1>Agent List</h1>
     <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+      <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
       <li *ngIf="chatMode"><a href="javascript:void(0)">Chats</a></li>
       <li *ngIf="!chatMode"><a href="javascript:void(0)">Contact</a></li>
       <li class="active"><a href="javascript:void(0)">List</a></li>
@@ -17,7 +17,8 @@
           </div>
           <!-- /.box-header -->
           <div class="box-body">
-            <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12"><table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
+            <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
+              <table id="chatList" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
               <thead>
               <tr role="row">
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>
@@ -31,7 +32,7 @@
               </thead>
               <tbody>
                 <tr role="row" class="odd" *ngFor="let item of (chatState | async).agentList; let i = index">
-                <td>{{i}}</td>
+                <td>{{i+1}}</td>
                 <td>{{item.first_name}}</td>
                 <td>{{item.last_name}}</td>
                 <td>{{item.email}}</td>
@@ -50,55 +51,10 @@
                 </td>
               </tr>
               </tbody>
-              <tfoot>
-              <tr>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">First Name</th>
-                <th class="sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" aria-sort="descending">Last Name</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Department</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>
-              </tr>
-              </tfoot>
             </table>
             </div>
             </div>
-              <div class="row">
-                <div class="col-sm-5">
-                  <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>
-                </div>
-                <div class="col-sm-7 text-right">
-                  <div class="dataTables_paginate paging_simple_numbers" id="example2_paginate">
-                    <ul class="pagination">
-                      <li class="paginate_button previous disabled" id="example2_previous">
-                        <a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0">Previous</a>
-                      </li>
-                      <li class="paginate_button active">
-                        <a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0">1</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="2" tabindex="0">2</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="3" tabindex="0">3</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="4" tabindex="0">4</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="5" tabindex="0">5</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="6" tabindex="0">6</a>
-                      </li>
-                      <li class="paginate_button next" id="example2_next">
-                        <a href="#" aria-controls="example2" data-dt-idx="7" tabindex="0">Next</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
+
             </div>
           </div>
           <!-- /.box-body -->
