--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
@@ -2,7 +2,7 @@
     <section class="content-header">
         <h1>Department Section</h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
             <li><a href="javascript:void(0)">Department</a></li>
             <li class="active"><a href="javascript:void(0)">List</a></li>
         </ol>
@@ -23,22 +23,24 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
+                                    <table id="departmentListTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
                                         <thead>
                                         <tr role="row">
                                             <th class="sorting" rowspan="1" colspan="1" >#</th>
-                                            <th class="sorting" rowspan="1" colspan="1" >Company</th>
                                             <th class="sorting" rowspan="1" colspan="1" >Department Name</th>
                                             <th class="sorting" rowspan="1" colspan="1" >Department Description</th>
+                                            <th class="sorting" rowspan="1" colspan="1" >Company</th>
+                                            <th class="sorting" rowspan="1" colspan="1" >Created Date</th>
                                             <th class="sorting" rowspan="1" colspan="1" >Actions</th>
                                         </tr>
                                         </thead>
                                         <tbody>
                                         <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).department.list; let i = index">
                                             <td>{{i+1}}</td>
-                                            <td>{{item.user_details.company}}</td>
                                             <td>{{item.department_name}}</td>
                                             <td>{{item.department_details}}</td>
+                                            <td>{{item.user_details?.company}}</td>
+                                            <td>{{item.created_at | date}}</td>
                                             <td>
                                                 <!--<button type="button" class="btn btn-primary btn-xs">-->
                                                     <!--<i class="fa fa-search" aria-hidden="true"></i>-->
@@ -55,54 +57,10 @@
                                             </td>
                                         </tr>
                                         </tbody>
-                                        <tfoot>
-                                        <tr>
-                                            <th rowspan="1" colspan="1">#</th>
-                                            <th rowspan="1" colspan="1" >Company</th>
-                                            <th rowspan="1" colspan="1">Department Name</th>
-                                            <th rowspan="1" colspan="1">Department Description</th>
-                                            <th rowspan="1" colspan="1">Actions</th>
-                                        </tr>
-                                        </tfoot>
                                     </table>
                                 </div>
                             </div>
                             <!-- Pagination -->
-                            <div class="row">
-                                <div class="col-sm-5">
-                                    <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>
-                                </div>
-                                <div class="col-sm-7 text-right">
-                                    <div class="dataTables_paginate paging_simple_numbers" id="example2_paginate">
-                                        <ul class="pagination">
-                                            <li class="paginate_button previous disabled" id="example2_previous">
-                                                <a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0">Previous</a>
-                                            </li>
-                                            <li class="paginate_button active">
-                                                <a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0">1</a>
-                                            </li>
-                                            <li class="paginate_button ">
-                                                <a href="#" aria-controls="example2" data-dt-idx="2" tabindex="0">2</a>
-                                            </li>
-                                            <li class="paginate_button ">
-                                                <a href="#" aria-controls="example2" data-dt-idx="3" tabindex="0">3</a>
-                                            </li>
-                                            <li class="paginate_button ">
-                                                <a href="#" aria-controls="example2" data-dt-idx="4" tabindex="0">4</a>
-                                            </li>
-                                            <li class="paginate_button ">
-                                                <a href="#" aria-controls="example2" data-dt-idx="5" tabindex="0">5</a>
-                                            </li>
-                                            <li class="paginate_button ">
-                                                <a href="#" aria-controls="example2" data-dt-idx="6" tabindex="0">6</a>
-                                            </li>
-                                            <li class="paginate_button next" id="example2_next">
-                                                <a href="#" aria-controls="example2" data-dt-idx="7" tabindex="0">Next</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                     <!-- /.box-body -->
