--- a/src/app/core/layout/inner-pages/twilio/create-twilio/create-twilio.component.html
+++ b/src/app/core/layout/inner-pages/twilio/create-twilio/create-twilio.component.html
@@ -2,7 +2,7 @@
   <section class="content-header">
     <h1>Twilio Section</h1>
     <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+      <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
       <li><a href="javascript:void(0)">Twilio Accounts</a></li>
       <li class="active"><a routerLink="/twilio/create">Create </a></li>
     </ol>
