--- a/src/app/core/layout/inner-pages/twilio/list-twilio/list-twilio.component.html
+++ b/src/app/core/layout/inner-pages/twilio/list-twilio/list-twilio.component.html
@@ -2,7 +2,7 @@
   <section class="content-header">
     <h1>Twilio Section</h1>
     <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+      <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
       <li><a href="javascript:void(0)">Twilio Accounts</a></li>
       <li class="active"><a routerLink="/twilio/list">List </a></li>
     </ol>
@@ -23,7 +23,7 @@
               </div>
               <div class="row">
                 <div class="col-sm-12">
-                  <table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
+                  <table id="twilioTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
               <thead>
               <tr role="row">
                 <th class="sorting" rowspan="1" colspan="1" >#</th>
@@ -46,56 +46,9 @@
                   <td>{{item.status}}</td>
                 </tr>
               </tbody>
-              <tfoot>
-                <tr>
-                  <th rowspan="1" colspan="1">#</th>
-                  <th rowspan="1" colspan="1">User</th>
-                  <!--<th rowspan="1" colspan="1">User Name</th>-->
-                  <th rowspan="1" colspan="1">Email Address</th>
-                  <th rowspan="1" colspan="1">Twilio SID</th>
-                  <th rowspan="1" colspan="1">Twilio Account Type</th>
-                  <th rowspan="1" colspan="1">Status</th>
-                </tr>
-              </tfoot>
             </table>
             </div>
             </div>
-              <!-- Pagination -->
-              <div class="row">
-                <div class="col-sm-5">
-                  <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>
-                </div>
-                <div class="col-sm-7 text-right">
-                  <div class="dataTables_paginate paging_simple_numbers" id="example2_paginate">
-                    <ul class="pagination">
-                      <li class="paginate_button previous disabled" id="example2_previous">
-                        <a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0">Previous</a>
-                      </li>
-                      <li class="paginate_button active">
-                        <a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0">1</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="2" tabindex="0">2</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="3" tabindex="0">3</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="4" tabindex="0">4</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="5" tabindex="0">5</a>
-                      </li>
-                      <li class="paginate_button ">
-                        <a href="#" aria-controls="example2" data-dt-idx="6" tabindex="0">6</a>
-                      </li>
-                      <li class="paginate_button next" id="example2_next">
-                        <a href="#" aria-controls="example2" data-dt-idx="7" tabindex="0">Next</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
           <!-- /.box-body -->
