--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -1,84 +1,132 @@
 <div class="content-wrapper">
-  <section class="content-header">
-    <h1>Admin List</h1>
-    <ol class="breadcrumb">
-      <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="javascript:void(0)">Admin</a></li>
-      <li class="active"><a routerLink="/admin/list">Admin List</a></li>
-    </ol>
-  </section>
-  <section class="content">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="box">
-          <div class="box-header">
-            <h3 class="box-title">Admin List</h3>
-          </div>
-          <!-- /.box-header -->
-          <div class="box-body">
-            <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
-              <div class="row">
-                <div class="col-sm-6">
-                </div>
-                <div class="col-sm-6"></div>
-              </div>
-              <div class="row">
-                <div class="col-sm-12">
-                  <table id="adminListTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
-              <thead>
-              <tr role="row">
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">First Name</th>
-                <th class="sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" aria-sort="descending">Last Name</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Company</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Twilio SID</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Register Date</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Action</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).admin.list; let i = index">
-                <td>{{i+1}}</td>
-                <td>{{item.first_name}}</td>
-                <td>{{item.last_name}}</td>
-                <td>{{item.company}}</td>
-                <td>{{item.email}}</td>
-                <td>{{item.phone}}</td>
-                <td>{{item.twilio_info?.twilio_sid}}</td>
-                <td>{{ item.created_at | date }}</td>
-
-                <td>
-                  <!-- Single button -->
-                    <div class="btn-group" [appDropdown]="'open'">
-                      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Action <span class="caret"></span>
-                      </button>
-                      <ul class="dropdown-menu">
-                        <li> <a (click)="onEdit(item.id)"><i class="fa fa-pencil" aria-hidden="true"></i>Edit</a> </li>
-                        <li *ngIf="item.twilio_info?.twilio_sid && item.profile_status == '1'"> <a (click)="blockUser(item.id)"><i class="fa fa-lock" aria-hidden="true"></i>Block</a> </li>
-                        <li *ngIf="item.twilio_info?.twilio_sid && item.profile_status == '2'"> <a (click)="UnblockUser(item.id)"><i class="fa fa-unlock" aria-hidden="true"></i>Unblock</a> </li>
-                        <li *ngIf="!item.twilio_info?.twilio_sid"> <a (click)="createTwilioSid(item.id)"><i class="fa fa-retweet" aria-hidden="true"></i>Create SID</a> </li>
-                      </ul>
+    <section class="content-header">
+        <h1>Admin List</h1>
+        <ol class="breadcrumb">
+            <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li><a href="javascript:void(0)">Admin</a></li>
+            <li class="active"><a routerLink="/admin/list">Admin List</a></li>
+        </ol>
+    </section>
+    <section class="content">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box">
+                    <div class="box-header">
+                        <h3 class="box-title">Admin List</h3>
                     </div>
-                </td>
-              </tr>
-              </tbody>
-            </table>
+                    <!-- /.box-header -->
+                    <div class="box-body">
+                        <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    Search : <input [(ngModel)]="term" placeholder="keyword">
+                                </div>
+                                <div class="col-sm-6"></div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <table id="adminListTable1" class="table table-bordered table-hover dataTable"
+                                           role="grid" aria-describedby="example2_info">
+                                        <thead>
+                                        <tr role="row">
+                                            <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
+                                            <th tabindex="0" rowspan="1" colspan="1"
+                                                [class.active]="order === 'admin.list.first_name'"
+                                                (click)="setOrder('admin.list.first_name')"
+                                                class="mdl-data-table__cell--non-numeric">First Name <span
+                                                    [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                            <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                                                [class.active]="order === 'admin.list.last_name'"
+                                                (click)="setOrder('admin.list.last_name')"
+                                                class="mdl-data-table__cell--non-numeric">Last Name <span
+                                                    [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                            <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                                                [class.active]="order === 'admin.list.company'"
+                                                (click)="setOrder('admin.list.company')"
+                                                class="mdl-data-table__cell--non-numeric">Company <span
+                                                    [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                            <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Email</th>
+                                            <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Phone</th>
+                                            <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Twilio
+                                                SID
+                                            </th>
+                                            <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                                                [class.active]="order === 'admin.list.email'"
+                                                (click)="setOrder('admin.list.email')"
+                                                class="mdl-data-table__cell--non-numeric">Register Date <span
+                                                    [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                            <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Action
+                                            </th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr role="row" class="odd"
+                                            *ngFor="let item of (afterLoginState | async).admin.list | filter : term | orderBy: order:reverse:'case-insensitive' | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
+                                            <td>{{i+1}}</td>
+                                            <td>{{item.first_name}}</td>
+                                            <td>{{item.last_name}}</td>
+                                            <td>{{item.company}}</td>
+                                            <td>{{item.email}}</td>
+                                            <td>{{item.phone}}</td>
+                                            <td>{{item.twilio_info?.twilio_sid}}</td>
+                                            <td>{{ item.created_at | date }}</td>
+
+                                            <td>
+                                                <!-- Single button -->
+                                                <div class="btn-group" [appDropdown]="'open'">
+                                                    <button type="button" class="btn btn-default dropdown-toggle"
+                                                            data-toggle="dropdown" aria-haspopup="true"
+                                                            aria-expanded="false">
+                                                        Action <span class="caret"></span>
+                                                    </button>
+                                                    <ul class="dropdown-menu">
+                                                        <li><a (click)="onEdit(item.id)"><i class="fa fa-pencil"
+                                                                                            aria-hidden="true"></i>Edit</a>
+                                                        </li>
+                                                        <li *ngIf="item.twilio_info?.twilio_sid && item.profile_status == '1'">
+                                                            <a (click)="blockUser(item.id)"><i class="fa fa-lock"
+                                                                                               aria-hidden="true"></i>Block</a>
+                                                        </li>
+                                                        <li *ngIf="item.twilio_info?.twilio_sid && item.profile_status == '2'">
+                                                            <a (click)="UnblockUser(item.id)"><i class="fa fa-unlock"
+                                                                                                 aria-hidden="true"></i>Unblock</a>
+                                                        </li>
+                                                        <li *ngIf="!item.twilio_info?.twilio_sid"><a
+                                                                (click)="createTwilioSid(item.id)"><i
+                                                                class="fa fa-retweet" aria-hidden="true"></i>Create SID</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                    <div class="row">
+                                        <pagination-controls class="older_post_text"
+                                                             (pageChange)="page=$event"
+                                                             maxSize="9"
+                                                             directionLinks="true"
+                                                             autoHide="true"
+                                                             previousLabel=""
+                                                             nextLabel=""
+                                                             screenReaderPaginationLabel=""
+                                                             screenReaderPageLabel="page"
+                                                             screenReaderCurrentLabel="You're on page">
+                                        </pagination-controls>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+                <!-- /.box -->
+                <!-- <div class="msg-popup">
+                  <p>This is a success msg!</p>
+                </div> -->
             </div>
-            </div>
-            </div>
-          </div>
-          <!-- /.box-body -->
+            <!-- /.col -->
         </div>
-        <!-- /.box -->
-        <!-- <div class="msg-popup">
-          <p>This is a success msg!</p>
-        </div> -->
-      </div>
-      <!-- /.col -->
-    </div>
-    <!-- /.row -->
-  </section>
+        <!-- /.row -->
+    </section>
 </div>
