--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -16,22 +16,25 @@
           </div>
           <!-- /.box-header -->
           <div class="box-body">
-            <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
+            <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
+              <div class="row">
+                <div class="col-sm-6">Search : <input [(ngModel)]="term" placeholder="keyword"></div>
+                <div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
               <table id="agentListTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
               <thead>
               <tr role="row">
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">First Name</th>
-                <th class="sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" aria-sort="descending">Last Name</th>
-                  <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Company</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Register Date</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agent.list.first_name'" (click)="setOrder('agent.list.first_name')" class="mdl-data-table__cell--non-numeric">First Name <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agent.list.last_name'" (click)="setOrder('agent.list.last_name')" class="mdl-data-table__cell--non-numeric">Last Name <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agent.list.company'" (click)="setOrder('agent.list.company')" class="mdl-data-table__cell--non-numeric">Company <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Email </th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agent.list.created_at'" (click)="setOrder('agent.list.created_at')" class="mdl-data-table__cell--non-numeric">Register Date <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>
               </tr>
               </thead>
               <tbody>
-              <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).agent.list; let i = index">
+              <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).agent.list | filter : term | orderBy: order:reverse:'case-insensitive' | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
                 <td>{{i+1}}</td>
                 <td>{{item.first_name}}</td>
                 <td>{{item.last_name}}</td>
@@ -55,6 +58,19 @@
               </tr>
               </tbody>
             </table>
+              <div class="row">
+                <pagination-controls class="older_post_text"
+                                     (pageChange)="page=$event"
+                                     maxSize="9"
+                                     directionLinks="true"
+                                     autoHide="true"
+                                     previousLabel=""
+                                     nextLabel=""
+                                     screenReaderPaginationLabel=""
+                                     screenReaderPageLabel="page"
+                                     screenReaderCurrentLabel="You're on page">
+                </pagination-controls>
+              </div>
             </div>
             </div>
             </div>
