--- a/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
+++ b/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
@@ -16,18 +16,18 @@
           </div>
           <!-- /.box-header -->
           <div class="box-body">
-            <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
+            <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="keyword"> </div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
               <table id="contactListTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
               <thead>
               <tr role="row">
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">Client Name</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'client_info.client_name.name'" (click)="setOrder('client_info.client_name.name')" class="mdl-data-table__cell--non-numeric">Client Name<span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Email</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Phone</th>
               </tr>
               </thead>
               <tbody>
-                <tr role="row" class="odd" *ngFor="let item of (chatState | async).contactList; let i = index">
+                <tr role="row" class="odd" *ngFor="let item of (chatState | async).contactList | filter : term | orderBy: order:reverse:'case-insensitive' | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
                 <td>{{i}}</td>
                 <td>{{item.client_info.client_name.name}}</td>
                 <td>{{item.client_info.client_name.email}}</td>
@@ -36,6 +36,19 @@
               </tr>
               </tbody>
             </table>
+              <div class="row">
+                <pagination-controls class="older_post_text"
+                                     (pageChange)="page=$event"
+                                     maxSize="9"
+                                     directionLinks="true"
+                                     autoHide="true"
+                                     previousLabel=""
+                                     nextLabel=""
+                                     screenReaderPaginationLabel=""
+                                     screenReaderPageLabel="page"
+                                     screenReaderCurrentLabel="You're on page">
+                </pagination-controls>
+              </div>
             </div>
             </div>
             </div>
