--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
@@ -18,7 +18,7 @@
                     <div class="box-body">
                         <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
                             <div class="row">
-                                <div class="col-sm-6"></div>
+                                <div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="keyword"> </div>
                                 <div class="col-sm-6"></div>
                             </div>
                             <div class="row">
@@ -26,16 +26,16 @@
                                     <table id="departmentListTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
                                         <thead>
                                         <tr role="row">
-                                            <th class="sorting" rowspan="1" colspan="1" >#</th>
-                                            <th class="sorting" rowspan="1" colspan="1" >Department Name</th>
-                                            <th class="sorting" rowspan="1" colspan="1" >Department Description</th>
-                                            <th class="sorting" rowspan="1" colspan="1" >Company</th>
-                                            <th class="sorting" rowspan="1" colspan="1" >Created Date</th>
-                                            <th class="sorting" rowspan="1" colspan="1" >Actions</th>
+                                            <th rowspan="1" colspan="1" >#</th>
+                                            <th rowspan="1" colspan="1" [class.active]="order === 'department.list.department_name'" (click)="setOrder('department.list.department_name')" class="mdl-data-table__cell--non-numeric">Department Name <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                            <th rowspan="1" colspan="1" >Department Description</th>
+                                            <th rowspan="1" colspan="1" [class.active]="order === 'department.list.company'" (click)="setOrder('department.list.company')" class="mdl-data-table__cell--non-numeric">Company <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                            <th rowspan="1" colspan="1"  [class.active]="order === 'department.list.created_at'" (click)="setOrder('department.list.created_at')" class="mdl-data-table__cell--non-numeric">Created Date <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                            <th rowspan="1" colspan="1" >Actions</th>
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).department.list; let i = index">
+                                        <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).department.list | filter : term | orderBy: order:reverse:'case-insensitive' | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
                                             <td>{{i+1}}</td>
                                             <td>{{item.department_name}}</td>
                                             <td>{{item.department_details}}</td>
@@ -58,6 +58,19 @@
                                         </tr>
                                         </tbody>
                                     </table>
+                                    <div class="row">
+                                        <pagination-controls class="older_post_text"
+                                                             (pageChange)="page=$event"
+                                                             maxSize="9"
+                                                             directionLinks="true"
+                                                             autoHide="true"
+                                                             previousLabel=""
+                                                             nextLabel=""
+                                                             screenReaderPaginationLabel=""
+                                                             screenReaderPageLabel="page"
+                                                             screenReaderCurrentLabel="You're on page">
+                                        </pagination-controls>
+                                    </div>
                                 </div>
                             </div>
                             <!-- Pagination -->
