--- a/src/app/core/layout/inner-pages/admin/create-admin/create-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/create-admin/create-admin.component.html
@@ -142,7 +142,7 @@
               </div>
               <div class="col-md-12">
                 <div class="box-footer">
-                  <button type="submit" [disabled]="form.invalid" class="btn btn-primary pull-right" >Submit</button>
+                  <button type="submit" [disabled]="form.invalid" class="btn btn-primary pull-right"><i *ngIf="loader" class="fa fa-spinner fa-spin"></i> Submit</button>
                 </div>
               </div>
             </form>
