--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
@@ -175,7 +175,7 @@
 
               <div class="col-md-12">
                 <div class="box-footer">
-                  <button type="submit" [disabled]="form.invalid || !selectDept" class="btn btn-primary pull-right" >Submit</button>
+                  <button type="submit" [disabled]="form.invalid || !selectDept" class="btn btn-primary pull-right" ><i *ngIf="loader" class="fa fa-spinner fa-spin"></i> Submit</button>
                 </div>
               </div>
             </form>
