--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -85,7 +85,7 @@
                                             [disabled]="form.invalid || selected.value <= 0"
                                             class="btn btn-primary pull-right"
                                     >
-                                        Submit
+                                        <i *ngIf="loader" class="fa fa-spinner fa-spin"></i> Submit
                                     </button>
                                 </div>
                             </div>
